--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.android.support:percent:22.2.0'
+    compile 'com.jakewharton:butterknife:8.4.0'
+
 }
