--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.android.support:percent:22.2.0'
     compile 'com.jakewharton:butterknife:8.4.0'
-
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:design:25.1.0'
 }
