--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -15,6 +15,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:enabled="true"
+            android:exported="true"
+            android:name=".service.MsgService">
+            <intent-filter>
+                <action android:name="android.intent.action.RESPOND_VIA_MESSAGE">
+
+                </action>
+
+            </intent-filter>
+
+        </service>
     </application>
 
 </manifest>
