--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -24,10 +24,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha6'
     compile 'com.android.support:recyclerview-v7:25.1.0'
-    compile 'com.android.support:percent:22.2.0'
+    compile 'com.android.support:cardview-v7:25.1.0'
+    compile 'com.android.support:percent:25.0.0'
     compile 'com.jakewharton:butterknife:8.5.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:design:25.1.0'
