--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.panyunyi.growingup">
-
+    <permission android:name="com.tencent.mm.permission.GET_QRCODE_INFO"></permission>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -33,7 +33,9 @@
         <activity
             android:name=".ui.activity.InspireActivity"
             android:label="@string/title_activity_inspire"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
+        <activity android:name=".TestActivty"></activity>
+        <activity android:name=".ui.activity.MineActivity"></activity>
     </application>
 
 </manifest>
