--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.panyunyi.growingup">
-    <permission android:name="com.tencent.mm.permission.GET_QRCODE_INFO"></permission>
+
+    <uses-permission-sdk-23 android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission-sdk-23  android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -34,8 +36,11 @@
             android:name=".ui.activity.InspireActivity"
             android:label="@string/title_activity_inspire"
             android:theme="@style/AppTheme" />
-        <activity android:name=".TestActivty"></activity>
-        <activity android:name=".ui.activity.MineActivity"></activity>
+        <activity android:name=".TestActivty" />
+        <activity android:name=".ui.activity.MineActivity" />
+        <activity android:name=".ui.activity.AcceptActivity" />
+        <activity android:name=".ui.activity.ProfileActivity"></activity>
+        <activity android:name=".ui.activity.PartyActivity"></activity>
     </application>
 
 </manifest>
