--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -25,6 +25,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile files('libs/commons-io-2.5.jar')
+    compile project(path: ':library')
+    compile project(path: ':movingimageview')
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha6'
     compile 'com.android.support:recyclerview-v7:25.1.0'
@@ -34,8 +36,10 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:design:25.1.0'
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'
+    compile 'com.orhanobut:logger:2.1.1'
+    compile 'com.alibaba:fastjson:1.1.59.android'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-    compile project(path: ':library')
-    compile project(path: ':movingimageview')
 }
