--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile 'com.orhanobut:logger:2.1.1'
     compile 'com.alibaba:fastjson:1.1.59.android'
+    compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
