<feat>(<src>): <add 2 features> #feat: - add the register function - add online environment and dev environment

--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -14,18 +14,24 @@
     <uses-permission-sdk-23 android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".app.Application"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
-            >
-
-        </activity>
+        <activity android:name=".MainActivity"></activity>
 
         <service
             android:name=".service.MsgService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.RESPOND_VIA_MESSAGE" />
+            </intent-filter>
+        </service>
+        <service
+            android:name=".service.EpollService"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
@@ -55,7 +61,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.InfoActivity"></activity>
+        <activity android:name=".ui.activity.InfoActivity" />
+        <activity android:name=".ui.activity.RegisterActivity"></activity>
     </application>
 
 </manifest>
