--- a/MyApplication/app/src/main/assets/config.properties
+++ b/MyApplication/app/src/main/assets/config.properties
@@ -1,11 +1,11 @@
 
 #还需要修改TitaCommenConstant 中的一个线上和测试环境
 #for test
-#base_url = http://60.205.215.161
+base_url = http://60.205.215.161
 
 
 #for dev
-base_url http://95c6cbf1.ngrok.io
+#base_url http://f9fb92fa.ngrok.io
 #for labs
 
 
@@ -13,6 +13,4 @@ base_url http://95c6cbf1.ngrok.io
 
 
 
-
-#TitaCommenConstant也需要修改线上和测试环境链接
 
